# Fund-Screener

./: .gitignore  README.md  config.yaml.example  nvda_analysis.json  pyproject.toml  reliance_analysis.json  test_aapl_analysis.json  test_hyundai_ns_analysis.json  test_nvda_analysis.json  test_reliance_ns_analysis.json  test_swiggy_ns_analysis.json  test_tcs_ns_analysis.json
src/: __init__.py  config.py  data_fetcher.py  database.py  main.py  models.py  processor.py  signals.py
tests/: __init__.py  conftest.py  test_data_fetcher.py  test_processor.py  test_signals.py
